--- a/es-core/CMakeLists.txt
+++ b/es-core/CMakeLists.txt
@@ -108,6 +108,7 @@ set(CORE_HEADERS
 	${CMAKE_CURRENT_SOURCE_DIR}/src/renderers/Renderer_GL21.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/renderers/Renderer_GLES10.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/renderers/Renderer_GLES20.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/renderers/Renderer_GLES30.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/renderers/GlExtensions.h	
 
 	# Resources
@@ -239,6 +240,7 @@ set(CORE_SOURCES
 	${CMAKE_CURRENT_SOURCE_DIR}/src/renderers/Renderer_GL21.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/renderers/Renderer_GLES10.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/renderers/Renderer_GLES20.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/renderers/Renderer_GLES30.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/renderers/GlExtensions.cpp	
 	${CMAKE_CURRENT_SOURCE_DIR}/src/renderers/Shader.cpp	
 
